--- a/Week5/views/todo-detail.ejs
+++ b/Week5/views/todo-detail.ejs
@@ -19,8 +19,17 @@
 <!-- Form to change title -->
 <form method="post" action="/update-todo/<%= todo.id %>">
   <input type="text" name="title" value="<%= todo.title %>" placeholder="Změnit titulek todočka">
+  <select name="priority">
+    <option value="1" <%= todo.priority == 1 ? 'selected' : '' %>>Low</option>
+    <option value="2" <%= todo.priority == 2 ? 'selected' : '' %>>Normal</option>
+    <option value="3" <%= todo.priority == 3 ? 'selected' : '' %>>High</option>
+  </select>
   <button type="submit">Upravit</button>
 </form>
+<a href="/" class="btn">Back to Main Page</a>
+<!-- Existing form elements -->
+<!-- Priority selector -->
+
 
 </body>
 </html>
